--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -29,6 +29,7 @@ body {
     height: 100vh;
     width: 100vw;
     background-color: var(--color-desktop-bg);
-    font-family: 'Roboto', sans-serif;;
+    font-family: 'Roboto', sans-serif;
+    position: relative;
 }
 
