--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -6,6 +6,7 @@
     display: flex;
     height: var(--height-header);
     border-bottom: var(--border-bottom-header);
+    z-index: 2;
 
     &__logo {
         background-color: var(--color-logo-bg);
@@ -66,7 +67,6 @@
             text-transform: uppercase;
             font-size: var(--font-size-big);
             font-weight: 400;
-            //color: var(--color-white);
             color: black;
             margin-left: 2.4rem;
             letter-spacing: 0.5px;
